--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,13 @@
 			<artifactId>xlsx-streamer</artifactId>
 			<version>2.1.0</version>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.springframework.data</groupId>
+     <artifactId>spring-data-commons</artifactId>
+     <version>2.1.10.RELEASE</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
